--- a/Project10/app/src/main/res/layout/activity_result.xml
+++ b/Project10/app/src/main/res/layout/activity_result.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResultActivity">
+    tools:context=".ResultActivity"
+    android:gravity="center_vertical">
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
