--- a/Project11_01/app/src/main/res/layout/activity_dynamic.xml
+++ b/Project11_01/app/src/main/res/layout/activity_dynamic.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".DynamicActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,5 +37,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/dynamicListView"/>
+        android:id="@+id/dynamicListView"
+        />
 </LinearLayout>
