--- a/Project11_01/app/src/main/res/layout/activity_custom.xml
+++ b/Project11_01/app/src/main/res/layout/activity_custom.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".CustomActivity">
 
+    <ListView
+        android:id="@+id/customListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
