--- a/database/app/src/main/res/layout/activity_main.xml
+++ b/database/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="조회" />
+            android:text="삭제" />
     </LinearLayout>
 
     <LinearLayout
